# IA-Tec

./: Puzle8.py  README.md
latex/unidad-1/tarea-2/: tarea-2.fdb_latexmk  tarea-2.fls  tarea-2.tex
latex/unidad-1/tarea-3/: tarea-3.fdb_latexmk  tarea-3.fls  tarea-3.tex
latex/unidad-1/tarea-4/: bibliography.bib  tarea-4.aux  tarea-4.bbl  tarea-4.blg  tarea-4.fdb_latexmk  tarea-4.fls  tarea-4.run.xml  tarea-4.tex
latex/unidad-2/tarea-1/: tarea-1.fdb_latexmk  tarea-1.fls  tarea-1.tex
latex/unidad-2/tarea-2/: tarea-2.fdb_latexmk  tarea-2.fls  tarea-2.tex
tarea-1/: .~lock.arbol.docx#  README.md  arbol.docx  arbol.py  pyproject.toml
tarea-2/: IA.docx  README.md
tarea-3/: README.md
tarea-5/: README.md  puzzle8-term.py  pyproject.toml
tarea-6/: PROCESOS DE APRENDIZAJE AUTOMATICO.docx
unidad-1/tarea-3/: Sistema de recomendación.pptx
unidad-1/tarea-4/: README.md
unidad-1/tarea-5/: puzzle8.py
unidad-2/tarea-1/: README.md
unidad-2/tarea-2/: README.md
unidad-2/tarea-3/: README.md  app.py  train_model.py
unidad-2/tarea-4/: README.md
unidad-3/tarea-3/: Proposición.docx
unidad-3/tarea-4/: hello.py  proposiciones.json  pyproject.toml  reglas.json  sistema_experto.py
unidad-4/tarea-1/: .gitignore  README.md  main.py  pyproject.toml
unidad-4/tarea-2/: README.md  detect_emotion.py  evaluate_model.py  pyproject.toml  train_model.py
