[project]
name = "tarea-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "opencv-python>=4.11.0.86",
]

[dependency-groups]
dev = [
    "jedi-language-server>=0.45.1",
    "python-lsp-server>=1.12.2",
    "ruff>=0.11.11",
]
