[project]
name = "tarea-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.1.3",
    "opencv-python>=4.11.0.86",
    "pillow>=11.2.1",
    "scikit-learn>=1.6.1",
    "tensorflow>=2.19.0",
]

[dependency-groups]
dev = [
    "jedi-language-server>=0.45.1",
    "python-lsp-server>=1.12.2",
    "ruff>=0.11.11",
]
